feat: additional swagger
